<resources>
    <string name="icon_name">CW 2016</string>
    <string name="app_name">CoolWallet</string>
    <string name="action_settings">Exchange Login OTP</string>
    <string name="img_logo1">logo1</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="strErase">Are you sure you want to\nreset your CoolWallet?...</string>
    <string name="strEnterOtp">Please enter OTP</string>
    <string name="strSearch">Searching for CoolWallet...</string>
    <string name="strSearchDetail">Please turn on CoolWallet by\npressing the button on card.</string>
    <string name="strPullMsg">Pull down to refresh card list</string>
    <string name="strConfirmOtp">Confirm One Time Password (OTP)</string>
    <string name="strKeyOtp">Type in OTP shown on card</string>
    <string name="strPairSuccessful">Pairing successful</string>
    <string name="BLOCKR_ADDRESS_INFO_API">http://btc.blockr.io/api/v1/address/info/</string>
    <string name="coolwallet_card">CoolWallet card</string>
    <string name="exchange">Exchange Site</string>
    <string name="order_details">Order details</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="open_orders">Open orders</string>
    <string name="host_devices">Host devices</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="security">Security</string>
    <string name="exit">Exit</string>
    <string name="import_seed">Import Seed</string>
    <string name="payment_service_provider">Payment Service Provider</string>
    <string name="share_address">Address Sharing</string>
    <string name="label">Label</string>
    <string name="request">Request</string>
    <string name="copy">Copy</string>
    <string name="edit_label">Edit Label</string>
    <string name="request_payment">Request Payment</string>
    <string name="copied">Copied!</string>
    <string name="generating_new_address">Generating new address</string>
    <string name="unable_create_new_address">Unable to create new address</string>
    <string name="maximum_unused_address">Maximum number of 5 unused addresses reached in this account</string>
    <string name="create_new_address">Create new address</string>
    <string name="login_host">Login Host...</string>
    <string name="connecting">Connecting...</string>
    <string name="disconnected">disconnected.</string>
    <string name="connect">Connect</string>
    <string name="reset">Reset</string>
    <string name="paring">Pairing...</string>
    <string name="gen_reset_otp">Generating Reset OTP...</string>
    <string name="wait_authorization">Waiting for authorization from paired device</string>
    <string name="unable_to_pair">Unable to pair</string>
    <string name="maximum_paired_limitation">maximum number of 3 hosts have been paired with this card</string>
    <string name="error">Error</string>
    <string name="approve_success">Approve onSuccess</string>
    <string name="incorrect_otp_try_again">Incorrect OTP, Please try again.</string>
    <string name="start_to_share_address">Start to Share address</string>
    <string name="reference_number_is">/nYour Reference Number is/n</string>
    <string name="address_sharing_success">Address sharing onSuccess</string>
    <string name="resetting">Resetting...</string>
    <string name="otp_incorrect">OTP incorrect</string>
    <string name="plz_try_again">Please try again</string>
    <string name="error_msg">Error Message</string>
    <string name="initial_success">Initial Success</string>
    <string name="restart_coolwallet">Please restart CoolWallet and reset again.</string>
    <string name="msg_xchs_get_raw_addr">Get transaction data failed.</string>
    <string name="tv_exchange_sell_str">Pending sell orders</string>
    <string name="tv_exchange_buy_str">Pending buy orders</string>
    <string name="tv_exchange_verification_str">Verify OTP to place your sell orders</string>
    <string name="tv_order_notice_str">Your order will be cancelled automatically after this time</string>
    <string name="btn_complete_order_str">Complete order</string>
    <string name="btn_cancel_order_str">Cancel order</string>
    <string name="btn_str_sign_in">Sign in</string>
    <string name="btn_str_sign_up">Sign up</string>
    <string name="str_login_title">Trade wih other CoolWallet holders\non CoolBitx Exchange</string>
    <string name="btn_place_order">Place an order now</string>
    <string name="tv_no_pending_order">No pending orders yet</string>
    <string name="url_exchange_site">http://xsm.coolbitx.com:8080/signup</string>
    <string name="str_cancel_order_msg"> Are you sure you want to cancel order?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_unable_cancel">Unable to cancel order</string>
    <string name="reason">Reason:</string>
    <string name="login">Login...</string>
    <string name="login_failed">Login failed</string>
    <string name="press_exit">Press once again to exit Exchange site!</string>
    <string name="sync_failed">Synchronization failed</string>
    <string name="no_open_orders_found"> No open orders found.</string>
    <string name="unable_to_get_open_orders"> Unable to get open orders.</string>
    <string name="unable_to_cancel_order"> Unable to cancel order.</string>
    <string name="unable_to_generate_otp">Unable to generate OTP</string>
    <string name="begin_to_block_order"> Begin to block order</string>
    <string name="unable_to_block"> Unable to Block</string>
    <string name="cancel_block_order"> Are you sure you want to cancel the blocking order?</string>
    <string name="canceling_block_order"> Canceling the blocking order...</string>
    <string name="unable_to_cancel_block"> Unable to Cancel Block</string>
    <string name="preparing_to_complete_order">Preparing to complete order...</string>
    <string name="can_not_find_unspent">Can\'t find the unspents.</string>
    <string name="preparing_transaction"> Preparing transaction...</string>
    <string name="sign_login_failed">Sign login failure</string>
    <string name="plz_press_button">Please press Button On the Card</string>
    <string name="sending_bitcoins">Sending bitcoins</string>
    <string name="cmd_trx_begin_error">Command \'TrxBegin\' error</string>
    <string name="failed_to_verify_otp">Failed to verify OTP</string>
    <string name="sent">Sent</string>
    <string name="btc_to">btc to</string>
    <string name="amount">Amount</string>
    <string name="failed_to_broadcast_transaction">Failed to broadcast transaction to Blockchain</string>
    <string name="failed_to_get_change_address">Failed to get change address</string>
    <string name="create_account">Creating Account</string>
    <string name="plz_enter_valid_address"> Please enter a valid address.</string>
    <string name="get_unspents"> Get unspents...</string>
    <string name="cmd_trxsign_error">Command \'TrxSign\' error</string>
    <string name="address">address</string>
    <string name="inputs">Inputs</string>
    <string name="snackbar_network_connect_message_str">Please enable your Internet connection.</string>
    <string name="synchronizing_data">Synchronizing data</string>
    <string name="unable_connect_internet">Unable to connect to the Internet</string>
    <string name="processing">Processing</string>
    <string name="policy">Policy</string>
    <string name="feedback_sent">Feedback sent successfully.</string>
    <string name="failed_to_set_account_ino">Failed to set account info.</string>
    <string name="share_address_beta">Share address\n(beta)</string>
    <string name="generating_seed">Generating seed</string>
    <string name="checksum_incorrect">Checksum incorrect</string>
    <string name="plz_try_again_or_generate_seed_again">Please try again or generate seed again</string>
    <string name="hd_wallet_created">HD Wallet created</string>
    <string name="reminder">Reminder</string>
    <string name="put_coolwallet_on_coollink">Please put the CoolWallet on CoolLink while setting up.</string>
    <string name="approve_device">Approve this device</string>
    <string name="approve_new_device">New Device is approved!</string>
    <string name="approve_failed">Approved failed</string>
    <string name="remove_device">Remove this device</string>
    <string name="remove_failed">Removed failed</string>
    <string name="remove">Remove</string>
    <string name="approve">Approve</string>
    <string name="host_removed">Host Removed</string>
    <string name="host_approved">Host Approved</string>
    <string name="pref_title_security_otp">Enable One Time Password\n(OTP) on transactions</string>
    <string name="pref_title_security_crad_transaction">Enable press the button on the\ncard to complete transactions</string>
    <string name="pref_title_security_watch_dog">Enable Watch dig function</string>
    <string name="strPairSuccessfulDetail">CoolWallet allows you to pair up to\n3 devices,This device will be able to authenticate the second device.</string>
    <string name="strCancel">Cancel</string>
    <string name="strReset">Reset</string>
    <string name="strPairPhone">Pair with this device</string>
    <string name="connetc_status">Connect status</string>
    <string name="ok">Ok</string>
    <string name="issue_feedback_title">Issue FeedBack</string>
    <string name="issue_feedback_policy_title">Policy</string>
    <string name="issue_feedback_message">The current status log of this app will be sent to CoolBitX. Please email <![CDATA[info@coolbitx.com]]> to follow up the issue.</string>
    <string name="issue_feedback_policy">This issue feedback is used to diagnose problems and improve CoolWallet.
        No sensitive data or private key will be shared. Any personal information you submit whether explicitly or incidentally
        will be protected in accordance with our privacy policies. By submitting this feedback, you agree that
        CoolBitX may use feedback that you provide to improve any CoolBitX product or service.</string>
    <string name="tv_security_otp">Enable One Time Password\n(OTP) on transactions</string>
    <string name="tv_security_enable_press_button">Enable press the button on the\ncard to complete transactions</string>
    <string name="tv_security_dog">Enable Watch dog function</string>
    <string name="tv_security_dog_explain">Set an alert that warms you when CoolWallet\nand your device are certain distance apart</string>
    <string name="card_name">Card Name</string>
    <string name="tv_logout_str1">Do you want to disconnect the\n CoolWallet?</string>
    <string name="tv_logout_str2">The watchdog feature will be\ndisabled once disconnected.</string>
    <string name="btn_str_logout">Disconnect CoolWallet</string>
    <string name="update">Update</string>
    <string name="tv_str_show_fiat">Show fiat value on card</string>
    <string name="btn_create_HDW">Create Wallet</string>
    <string name="str_seedWords_confirm">
        Plese double check the words you\n
        have written down carefully.\n
        This is to make sure you can recover\n
        your wallet if the card gets lost.
    </string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="tv_recovery_title">Recovering...</string>
    <string name="tv_recovery_msg">Please wait and put your\nCollWallet on the charger.</string>
    <string name="txt_createHDWallet">Please user a calculator to add all the\nsets of numbers and enter the result\nbelow in order to verivy that you have\nwritten them down correctly.</string>
    <string name="txt_createHDWallet_example">For example:\n1111111+123456+234434+.....</string>
    <string name="txt_createHDWallet_alert">IMPORTANT!This is the only time\nyou can make a backup of your\nbitcoins.</string>
    <string name="strCreateWallet">Create Wallet</string>
</resources>