<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/col_black">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:contentDescription="@string/img_logo1"
        android:src="@mipmap/logo1" />

    <TextView
        android:id="@+id/txtsearch"
        style="@style/TextView_White_Bold_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/strConfirmOtp"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:id="@+id/editotp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/txtsearch"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_format"
        style="@style/TextView_Black_16"
        android:maxLength="6"
        android:numeric="integer"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/txtsearchDetail"
        style="@style/TextView_White_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/strKeyOtp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editotp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_pair"
        style="@style/TextView_Black_16"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/selector_button"
        android:text="@string/strPairPhone"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="88dp" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/TextView_Black_16"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/selector_button"
        android:src="@color/button_material_dark"
        android:text="@string/strCancel"
        android:layout_alignTop="@+id/btn_pair"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>


</RelativeLayout>
