<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_black_1000"
   >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:contentDescription="@string/img_logo1"
        android:src="@mipmap/logo1" />
    <TextView
        style="@style/TextView_White_Bold_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_recovery_title"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/textView1"
        style="@style/TextView_White_Bold_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_recovery_msg"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/TextView_White_Bold_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="progress"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />
</RelativeLayout>