<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30px"
        android:background="@android:color/black"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/str_seedWords_confirm"
            android:textColor="@color/bottomtab_normal"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_seed_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="150px"
            android:layout_marginTop="30dp"
            android:text="seed"
            android:textColor="@color/bottomtab_normal"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btn_seedWords_next"
            style="@style/TextView_Black_16"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/selector_button"
            android:text="@string/btn_next"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/lin_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seedWords_confirm"
                style="@style/TextView_Black_16"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/selector_button"
                android:text="@string/btn_create_HDW" />

            <android.support.v4.widget.Space
                android:id="@+id/spacer"
                android:layout_width="5dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="invisible" />

            <Button
                android:id="@+id/seedWords_previous"
                style="@style/TextView_Black_16"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/selector_button"
                android:text="@string/btn_previous" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>