<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/col_black">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:contentDescription="@string/img_logo1"
        android:src="@mipmap/logo1" />

    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cw_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imgLogo">

        <ExpandableListView
            android:id="@+id/cw_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPullMsg"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strPullMsg"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/md_grey_300"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="V x.x.x"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/md_grey_500"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgsearch"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/img_logo1"
        android:src="@drawable/search"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/txtsearch"
        style="@style/TextView_White_Bold_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imgsearch"
        android:text="@string/strSearch"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txtsearchDetail"
        style="@style/TextView_White_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtsearch"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/strSearchDetail" />

</RelativeLayout>
